Updated more commands
