# src/api/api/api_id.ts
@@ -1,45 +1,49 @@
-import Api from "../../scripts/api";
-import { DBcon } from "../..";
-import { handleQuery } from "../../scripts/handle";
-import { responseDone } from "../../scripts/response";
-import { checkApiId } from "../../scripts/idCheck";
+import express, { response } from 'express';
+import unusedRequestTypes from '../../scripts/RequestHandler/unusedRequestType';
+import authHandler from '../../scripts/RequestHandler/authHandler';
+import apiIdCheckHandler from '../../scripts/RequestHandler/idCheckHandler/apiIdCheckHandler';
+import { DBcon } from '../..';
+import { handleQuery } from '../../scripts/handle';
 
+const router = express.Router();
 
-interface TL_api {
-  api_id: number;
-  createDate: string;
-  lastUsed: string;
-  deviceName: string;
-}
-
-new Api({
-  url: '/api/:api_id',
-  auth: true,
-  get: (request, response, user) => {
-    checkApiId(request, response, user, () => {
-      // Api_id is valid return info
-      DBcon.query(
-        "SELECT `api_id`, `createDate`, `lastUsed`, 'deviceName' FROM `TL_apikeys` WHERE `api_id`=? and `user_id`=?",
-        [request.params.api_id, user.user_id],
-        handleQuery(response, (result: Array<TL_api>) => {
-          responseDone(response, {
-            length: result.length,
-            result: result,
-          });
-        })
-      );
-    });
-  },
-  delete: (request, response, user) => {
-    checkApiId(request, response, user, () => {
-      // Api_id is valid remove it
-      DBcon.query(
-        "DELETE FROM `TL_apikeys` WHERE `api_id`=? and `user_id`=?",
-        [request.params.api_id, user.user_id],
-        handleQuery(response, () => {
-          responseDone(response);
-        })
-      );
-    });
+// Get infomation about a single api key
+router.get(
+  '/:apiId',
+  authHandler('trackless.api.read'),
+  apiIdCheckHandler(),
+  (request, response, next) => {
+    // Get the data from the server
+    DBcon.query(
+      "SELECT `api_id`, `createDate`, `lastUsed`, `deviceName` FROM `TL_apikeys` WHERE `user_id`=? AND `api_id`=?",
+      [request.user.user_id, request.params.apiId],
+      handleQuery(next, (result) => {
+        // Send the data back to the user
+        response.status(200).json(result);
+      })
+    )
   }
-});
+)
+
+// Remove a single api key
+router.delete(
+  '/:apiId',
+  authHandler('trackless.api.remove'),
+  apiIdCheckHandler(),
+  (request, response, next) => {
+    // Send the command to the server
+    DBcon.query(
+      "DELETE FROM `TL_apikeys` WHERE `api_id`=? and `user_id`=?",
+      [request.params.apiId, request.user.user_id],
+      handleQuery(next, () => {
+        response.status(200).json({
+          message: 'done'
+        })
+      })
+    );
+  }
+)
+
+router.use(unusedRequestTypes());
+
+export default router;
