# src/api/api/index.ts
@@ -1,78 +1,31 @@
-import Api from "../../scripts/api";
-import { DBcon, server } from "../..";
-import { handleQuery } from "../../scripts/handle";
-import { responseDone, responseCreated, responseBadRequest } from "../../scripts/response";
-import { requiredDataCheck } from "../../scripts/dataCheck";
-import {  mysqlTEXT } from "../../scripts/types";
-import { sha512_256 } from "js-sha512";
-import { get as _get } from 'lodash';
-import { missingError } from "../../scripts/error";
-import { checkUsernamePasswd } from "../../global/language";
+import express from 'express';
+import unusedRequestTypes from '../../scripts/RequestHandler/unusedRequestType';
+import authHandler from '../../scripts/RequestHandler/authHandler';
+import { DBcon } from '../..';
+import { handleQuery } from '../../scripts/handle';
 
-export interface APIKeyNames {
-  api_id:     number;
-  createDate: string;
-  lastUsed:   string;
-  deviceName: string;
-}
+const router = express.Router();
 
-new Api({
-  url: '/api',
-  auth: true,
-  get: (request, response, user) => {
+// Get all your active api keys
+router.get(
+  '/',
+  authHandler('trackless.api.read'),
+  (request, response, next) => {
+    // Get all the api keys from the server
     DBcon.query(
       "SELECT `api_id`, `createDate`, `lastUsed`, `deviceName` FROM `TL_apikeys` WHERE `user_id`=?",
-      [user.user_id],
-      handleQuery(response, (result: Array<APIKeyNames>) => {
-        responseDone(response, {
-          result: result
-        })
-      })
-    );
-  },
-});
-
-server.post('/login', (request, response) => {
-  requiredDataCheck(request, response, [
-    {name: 'username', check: mysqlTEXT},
-    {name: 'password', check: mysqlTEXT},
-    {name: 'deviceName', check: mysqlTEXT},
-  ]).then(() => {
-    // Get the infomation needed from the server
-    DBcon.query(
-      "SELECT `salt_hash`, `hash`, `user_id` FROM `TL_users` WHERE `username`=?",
-      [request.body.username],
-      handleQuery(response, (result) => {
-        // Check the password
-        if (sha512_256(request.body.password + _get(result, '[0].salt_hash', '')) === _get(result, '[0].hash', '')) {
-          const apiKey:string = sha512_256(Date.now().toString()); // Generated using time
-          const user_id:number = result[0].user_id;
-
-          // Send it to the database
-          DBcon.query(
-            "INSERT INTO `TL_apikeys` ( `apiKey`, `deviceName`, `user_id` ) VALUES (?,?,?)",
-            [
-              sha512_256(apiKey),
-              request.body.deviceName,
-              user_id
-            ],
-            handleQuery(response, () => {
-              responseCreated(response, {
-                bearer: apiKey
-              })
-            })
-          );
-        } else {
-          responseBadRequest(response, {
-            error: {
-              message: checkUsernamePasswd
-            }
-          });
-        }
+      [request.user.user_id],
+      handleQuery(next, (result) => {
+        // Send the data back to the user
+        response.status(200).json(result);
       })
     )
-  }).catch(([missing, typeErr]) => {
-    // Something is missing report to the user
-    missingError(response, missing, typeErr);
-  });
-});
+  }
+);
+
+import apiIdRoute from './api_id';
+router.use('/', apiIdRoute);
+
+router.use(unusedRequestTypes());
+
+export default router;
